2005-03-29 15:38  antirez

	* ChangeLog, Makefile, jim.c, jim.h: A number of fix for commands
	  optimizing a bit too much objects not shared, that didn't played
	  very well with Jim arrays.  Added the [rand] command.

2005-03-28 19:47  antirez

	* ChangeLog, jim.c, test.tcl: The behaviour of [scope] modified a
	  bit. Test updated accordingly.

2005-03-28 18:57  antirez

	* ChangeLog, jim.c, test.tcl: [scope] command + tests

2005-03-26 15:12  antirez

	* ChangeLog, Makefile, jim-sdl.c, jim.c: some GFX primitive to SDL
	  extension. Minor changes to jim.c

2005-03-25 10:34  antirez

	* ChangeLog, bench.tcl, jim.c: SetReturnCodeFromAny() modified to
	  accept numerical codes.

2005-03-24 14:58  antirez

	* ChangeLog, jim.c, test.tcl: [range] command + tests

2005-03-24 12:00  antirez

	* ChangeLog, Makefile, TODO, jim-sdl.c: A simple SDL extension for
	  Jim.

2005-03-22 15:32  antirez

	* ChangeLog, jim.c: Fix for short circuit in expr.

2005-03-22 13:47  antirez

	* ChangeLog, jim.c: expr's || and && operators are now lazy.

2005-03-21 18:04  chi

	* jim.c, jim.h: Add copyright notice within jim.c & jim.h to
	  acknowledge Jim's license.

2005-03-21 13:39  antirez

	* ChangeLog, jim.c, test.tcl: Modified test.tcl to report the list
	  of failed tests at the end.

2005-03-21 12:59  chi

	* jim.c, jim.h, test.tcl: Add the [scan] command and the
	  Jim_ScanString function + tests.

	    The scanformat specification will be converted to a new Jim_Obj
	  of type
	  scanFormatStringObjType, that will contain the parsed
	  representation within its internal object representation. This
	  speed up multiple scanning within e.g. a loop, of objects were
	  cached.

	    For internal scanning we use sscanf currently (I am lazy right
	  now). That
	  means also, we will inherit its incapability to handle string
	  with embedded ZERO. It would be not too difficult to implement
	  another scanner just for the string and charset conversion type